# gander

./: .gitignore  README.md  config.yaml  pyproject.toml
gander/cli/generate/: __main__.py
gander/cli/gengif/: __main__.py
gander/cli/train/: __main__.py
gander/datasets/: __init__.py  celeba.py
gander/models/: __init__.py  gan.py  modules.py  stage_manager.py
tests/: test_gander.py
tests/gander/models/: test_gan.py
