[tool.poetry]
name = "gander"
version = "0.1.0"
description = ""
authors = ["Ross Hemsley <rlhemsley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^1.7.1"
pytorch-lightning = "^1.1.2"
click = "^7.1.2"
omegaconf = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
