[tool.poetry.scripts]
train = "gander.cli.train.__main__:main"
gengif = "gander.cli.gengif.__main__:main"

[tool.poetry]
name = "gander"
version = "0.1.0"
description = ""
authors = ["Ross Hemsley <rlhemsley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^1.7.1"
pytorch-lightning = "^1.1.2"
click = "^7.1.2"
omegaconf = "^2.0.5"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
